k8s/application/edge-proxy/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: edge-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  tls:
    - hosts:
        - webca.io
      secretName: webca-io-certificate
    - hosts:
        - monitoring.webca.io
      secretName: monitoring-webca-io-certificate
  rules:
    - host: webca.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: web-app
              servicePort: 8080
          - path: /api/(.*)
            backend:
              serviceName: api-server
              servicePort: 8080
          - path: /api/httplogger/(.*)
            backend:
              serviceName: httplogger
              servicePort: 8080
    - host: monitoring.webca.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: grafana
              servicePort: 80
